Smart Home Content

--- a/Home Page/index.html
+++ b/Home Page/index.html
@@ -11,8 +11,13 @@
 <p>Purchase <strong>NOW</strong> and experience the world of your <strong>NEW</strong> high tech forever home!</p>
 <img src='Futuristic House.jpg'>
 
-<section
+<ul>
+    <li>Automated Passwords</li>
+    <li>Sound Recognition for Pets</li>
+    <li>Automatic Folding Shutters and Closing Doors</li>
+</ul>
 
+<p>Experience our Future</p>
 </body>
  
 
