Smart Home Content

--- a/Automated-technology.html/index.html
+++ b/Automated-technology.html/index.html
@@ -6,13 +6,14 @@
 <body style="background-color: blanchedalmond;"></body>
 
 <body>
- <header>About Us</header>          <header>Learn More</header>
- <h1>The Future is Here</h1>
+
+ <h1>Welcome to Allendale Homes</h1>
+ <h2>The Future is Here</h2>
 
 
 <p>Purchase <strong>NOW</strong> and experience the world of your <strong>NEW</strong> high tech forever home!</p>
 <img src="House.png">
-<figcaption>STARTING NOW AT $3.5 MILLION!</figcaption>
+<figcaption><strong>STARTING NOW AT $3.5 MILLION!</strong></figcaption>
 
 <ul>
     <li>Automated Passwords</li>
@@ -67,5 +68,24 @@
  width="500" height="270">
  <img src="Fire rat.png"
  width="500" height="270">
+ <img src="Robot Snake.png"
+ width="500" height="270">
+ <figcaption><pre>               Our alarm will keep you safe from harm!                                   Our water rats can put out <strong>FIRES</strong>!                                  Our robot snakes can put out <strong>ANYTHING</strong>!</pre></figcaption> 
 
+ <hr>
+
+ <h2>Extra Rooms</h2>
+ <p>We also have rooms which you can customize to your liking!</p>
+ 
+ <p>Here are some options:</p>
+ <ul>
+    <li><a href="/Safety/Extra-Amenities.html">Fireplace</a></li>
+    <li>Built-in Music Speakers</li>
+    <li>Glass Walls</li>
+ </ul>
+
+ <hr>
+
+ <h2><strong>BUY NOW! HOMES ARE SELLING OUT FAST!</strong></h2>
+ <header>About Us</header>          <header>Learn More</header>         <header>Contact Us</header>
     </body>
