Smart Home Content

--- a/Safety/Extra-Amenities.html
+++ b/Safety/Extra-Amenities.html
@@ -1,6 +1,28 @@
 <!DOCTYPE html>
 <html lang="en-US"></html>
 <head><meta charset="UTF-8">
+    <title>Safety</title>
+    <h1>Safety/Amenities</h1>
     <body>
-        <p>i like turtles</p>
+        <img src="Fire Alarm.png"
+        width="500" height="270">
+        <figcaption>Our fire alarm will warn you of any danger that might be near your house.</figcaption>
+
+        <img src="ceiling water hoses.png"
+        width="500" height="270">
+        <figcaption>Our water hoses come out the ceiling, <strong>GUARANTEED</strong> to put out <strong>ANY</strong> fire inside the house. </figcaption>
+
+        <img src="Fire rat.png"
+        width="500" height="270">
+        <figcaption>Our fire rats can put out <strong>ANY</strong> fire!</figcaption>
+
+        <img src="ceiling robots.png"
+        width="500" height="270">
+        <figcaption>These ceiling robots will help your fire rats put out all fires within the house!</figcaption>
+
+        <img src="Robot Snake.png"
+        width="500" height="270">
+        <figcaption>Our invention of the robot snakes will help with any type of danger you come across.</figcaption>
+
+
     </body>
