--- a/Home Page/index.html
+++ b/Home Page/index.html
@@ -27,7 +27,7 @@
  
     <h2>Automatic Technology</h2>
 
-    <p>Here are some of our included tech within our homes:</p>
+    <p>Here are some of our included <a href="/Automated Tech/tech.html">tech</a> within our homes:</p>
     <ul>
         <li>Voice Clocks</li>
         <li>Automatic Stove Tops</li>
@@ -55,7 +55,7 @@
 <h2>Safety/Extra Amenities</h2>
  <p>Our safety system is <strong>TOP OF THE LINE</strong>!</p>
 
- <p>Let's take a look:</p>
+ <p>Let's take a <a href="/Safety/Extra-Amenities.html">look</a>:</p>
  <ul>
     <li>High Tech Fire Alarm with Warning Lights</li>
     <li>Ceiling Water Hoses</li>
@@ -77,9 +77,9 @@
  <h2>Extra Rooms</h2>
  <p>We also have rooms which you can customize to your liking!</p>
  
- <p>Here are some options:</p>
+ <p>Here are some <a href="/Extra Rooms/extras.html">options</a>:</p>
  <ul>
-    <li><a href="/Safety/Extra-Amenities.html">Fireplace</a></li>
+    <li>Fireplace</a></li>
     <li>Built-in Music Speakers</li>
     <li>Glass Walls</li>
  </ul>
