Smart Home Content

--- a/Automated Tech/tech.html
+++ b/Automated Tech/tech.html
@@ -2,6 +2,7 @@
 <html lang="en-US"></html>
 <head><meta charset="UTF-8">
     <title>Automated Tech</title>
+    <body style="background-color: blanchedalmond;"></body>
     <h1>Automated Technology</h1>
     <body>
         <img src="Clock.png"
