--- a/Extra Rooms/extras.html
+++ b/Extra Rooms/extras.html
@@ -2,6 +2,7 @@
 <html lang="en-US"></html>
 <head><meta charset="UTF-8">
     <title>Extras Rooms</title>
+    <body style="background-color: blanchedalmond;"></body>
 
     <h1>Extra Rooms/Appliances</h1>
 
