--- a/Safety/Extra-Amenities.html
+++ b/Safety/Extra-Amenities.html
@@ -2,6 +2,7 @@
 <html lang="en-US"></html>
 <head><meta charset="UTF-8">
     <title>Safety</title>
+    <body style="background-color: blanchedalmond;"></body>
     <h1>Safety/Amenities</h1>
     <body>
         <img src="Fire Alarm.png"
