Smart Home Content

--- a/Home Page/index.html
+++ b/Home Page/index.html
@@ -2,6 +2,24 @@
 <html lang="en-US"></html>
 <head><meta charset="UTF-8">
 
+    <link rel="stylesheet" href="flex.css">
+</head>
+    <body>
+        <nav>
+            <a href="/Automated Tech/">
+               Automated Technology
+            </a>
+            <a href="/Safety/">
+                Safety Features
+            </a>
+            <a href="/Extra Rooms/">
+                Extra Rooms/Appliances
+            </a>
+            
+        </nav>
+
+        <header>
+
     <title>Allendale Homes</title>
 <body style="background-color: blanchedalmond;"></body>
 
