--- a/Safety/Extra-Amenities.html
+++ b/Safety/Extra-Amenities.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html lang="en-US"></html>
 <head><meta charset="UTF-8">
+
+    <link rel="stylesheet" href="flex.css">
+
     <title>Safety</title>
     <body style="background-color: blanchedalmond;"></body>
     <h1>Safety/Amenities</h1>
