--- a/Automated Tech/tech.html
+++ b/Automated Tech/tech.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html lang="en-US"></html>
 <head><meta charset="UTF-8">
+
+    <link rel="stylesheet" href="flex.css">
+
     <title>Automated Tech</title>
     <body style="background-color: blanchedalmond;"></body>
     <h1>Automated Technology</h1>
