--- a/Extra Rooms/extras.html
+++ b/Extra Rooms/extras.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html lang="en-US"></html>
 <head><meta charset="UTF-8">
+
+    <link rel="stylesheet" href="flex.css">
+
     <title>Extras Rooms</title>
     <body style="background-color: blanchedalmond;"></body>
 
