Smart Home Content

--- a/Home-Page/index.html
+++ b/Home-Page/index.html
@@ -2,23 +2,23 @@
 <html lang="en-US"></html>
 <head><meta charset="UTF-8">
 
+
+<head>
     <link rel="stylesheet" href="flex.css">
 </head>
     <body>
         <nav>
-            <a href="/Automated Tech/">
+            <a href="/Automated Tech/tech.html">
                Automated Technology
             </a>
-            <a href="/Safety/">
+            <a href="/Safety/Extra-Amenities.html">
                 Safety Features
             </a>
-            <a href="/Extra Rooms/">
+            <a href="/Extra Rooms/extras.html">
                 Extra Rooms/Appliances
             </a>
-            
         </nav>
-
-        <header>
+        </header>
 
     <title>Allendale Homes</title>
 <body style="background-color: blanchedalmond;"></body>
@@ -45,7 +45,7 @@
  
     <h2>Automatic Technology</h2>
 
-    <p>Here are some of our included <a href="/Automated Tech/tech.html">tech</a> within our homes:</p>
+    <p>Here are some of our included tech within our homes:</p>
     <ul>
         <li>Voice Clocks</li>
         <li>Automatic Stove Tops</li>
@@ -73,7 +73,7 @@
 <h2>Safety/Extra Amenities</h2>
  <p>Our safety system is <strong>TOP OF THE LINE</strong>!</p>
 
- <p>Let's take a <a href="/Safety/Extra-Amenities.html">look</a>:</p>
+ <p>Let's take a look:</p>
  <ul>
     <li>High Tech Fire Alarm with Warning Lights</li>
     <li>Ceiling Water Hoses</li>
@@ -95,7 +95,7 @@
  <h2>Extra Rooms</h2>
  <p>We also have rooms which you can customize to your liking!</p>
  
- <p>Here are some <a href="/Extra Rooms/extras.html">options</a>:</p>
+ <p>Here are some options:</p>
  <ul>
     <li>Fireplace</a></li>
     <li>Built-in Music Speakers</li>
