Smart Home Content

--- a/Home-Page/index.html
+++ b/Home-Page/index.html
@@ -4,28 +4,22 @@
 
 
 <head>
-    <link rel="stylesheet" href="flex.css">
+    <link rel="stylesheet" href="style.css">
 </head>
     <body>
-        <nav>
-            <a href="/Automated Tech/tech.html">
-               Automated Technology
-            </a>
-            <a href="/Safety/Extra-Amenities.html">
-                Safety Features
-            </a>
-            <a href="/Extra Rooms/extras.html">
-                Extra Rooms/Appliances
-            </a>
+
+        <title>Allendale Homes</title>
+        <header>
+        <h1>Welcome to Allendale Homes</h1>
+        <nav class="navbar">
+            <ul>
+            <li><a href="/Automated Tech/tech.html">Automated Technology</a></li>
+            <li><a href="/Safety/Extra-Amenities.html">Safety Features</a></li>
+            <li><a href="/Extra Rooms/extras.html">Extra Rooms/Appliances</a></li>
+            </ul>
         </nav>
         </header>
 
-    <title>Allendale Homes</title>
-<body style="background-color: blanchedalmond;"></body>
-
-<body>
-
- <h1>Welcome to Allendale Homes</h1>
  <h2>The Future is Here</h2>
 
 
