Smart Home Content

--- a/Home-Page/index.html
+++ b/Home-Page/index.html
@@ -10,7 +10,7 @@
 
         <title>Allendale Homes</title>
         <header>
-        <h1>Welcome to Allendale Homes</h1>
+        <h1>Allendale Homes</h1>
         <nav class="navbar">
             <ul>
             <li><a href="/Automated Tech/tech.html">Automated Technology</a></li>
@@ -24,7 +24,9 @@
 
 
 <p>Purchase <strong>NOW</strong> and experience the world of your <strong>NEW</strong> high tech forever home!</p>
-<img src="House.png">
+<img src="Home.jpg">
+<div class="container">
+<div class="centered">Centered</div>
 <figcaption><strong>STARTING NOW AT $3.5 MILLION!</strong></figcaption>
 
 <ul>
