--- a/Home-Page/index.html
+++ b/Home-Page/index.html
@@ -11,6 +11,7 @@
         <title>Allendale Homes</title>
         <header>
         <h1>Welcome to Allendale Homes</h1>
+
         <nav class="navbar">
             <ul>
             <li><a href="/Automated Tech/tech.html">Automated Technology</a></li>
@@ -18,86 +19,105 @@
             <li><a href="/Extra Rooms/extras.html">Extra Rooms/Appliances</a></li>
             </ul>
         </nav>
+
+        <div class="top-image">
+            <div class="text-top">
+                <p>Welcome to Allendale Homes
+                </p>
+
         </header>
 
- <h2>The Future is Here</h2>
 
-
-<p>Purchase <strong>NOW</strong> and experience the world of your <strong>NEW</strong> high tech forever home!</p>
-<img src="House.png">
-<figcaption><strong>STARTING NOW AT $3.5 MILLION!</strong></figcaption>
-
-<ul>
-    <li>Automated Passwords</li>
-    <li>Sound Recognition for Pets</li>
-    <li>Automatic Folding Shutters and Closing Doors</li>
-</ul>
-
-<p>Experience <strong>YOUR</strong> Future</p>
-
-<hr>
  
-    <h2>Automatic Technology</h2>
 
-    <p>Here are some of our included tech within our homes:</p>
-    <ul>
-        <li>Voice Clocks</li>
-        <li>Automatic Stove Tops</li>
-        <li>Weather Boxes</li>
-        <li>Automatic Garage Doors</li>
-        <li>Rising Patio Tables</li>
-        <li>Built-in Bed Warmers</li>
-        <li>Rising Bathtubs</li>
-        <li>Aluminum Dishwasher</li>
-        <li>Robot Mice</li>
-        <li>Incinerator</li>
-        <li>Copper Scrap Rats</li>
-    </ul>
 
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+
+
+
+
+   
     <img src="Robot Mice.png"
-    width="500" height="270">
-      <img src="Clock.png" 
-    width="500" height="270">
-    <img src="Stove.png"
-    width="500" height="270">
-    <figcaption><pre>                Our robot mice will clean <strong>ANYTHING</strong>!                      You can set our <strong>TOP OF THE LINE CLOCK</strong> to anything you want on it.                       YOUR STOVE COOKS ON ITS <strong>OWN</strong>!</pre></figcaption>
+    width="600" height="900">
+    <img src="stovetop.jpg"
+    width="600" height="900">
 
-<hr>
 
-<h2>Safety/Extra Amenities</h2>
- <p>Our safety system is <strong>TOP OF THE LINE</strong>!</p>
 
- <p>Let's take a look:</p>
- <ul>
-    <li>High Tech Fire Alarm with Warning Lights</li>
-    <li>Ceiling Water Hoses</li>
-    <li>Water Rats</li>
-    <li>Futuristic Ceiling Robots</li>
-    <li>Robot Snakes</li>
- </ul>
 
- <img src="Fire Alarm.png"
- width="500" height="270">
- <img src="Fire rat.png"
- width="500" height="270">
- <img src="Robot Snake.png"
- width="500" height="270">
- <figcaption><pre>               Our alarm will keep you safe from harm!                                   Our water rats can put out <strong>FIRES</strong>!                                  Our robot snakes can put out <strong>ANYTHING</strong>!</pre></figcaption> 
 
- <hr>
+    <br>
+    <br> 
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
 
- <h2>Extra Rooms</h2>
- <p>We also have rooms which you can customize to your liking!</p>
- 
- <p>Here are some options:</p>
- <ul>
-    <li>Fireplace</a></li>
-    <li>Built-in Music Speakers</li>
-    <li>Glass Walls</li>
- </ul>
-
- <hr>
-
- <h2><strong>BUY NOW! HOMES ARE SELLING OUT FAST!</strong></h2>
  <header>About Us</header>          <header>Learn More</header>         <header>Contact Us</header>
     </body>
