Smart Home Content

--- a/Home-Page/index.html
+++ b/Home-Page/index.html
@@ -10,19 +10,18 @@
 
         <title>Allendale Homes</title>
         <header>
-<<<<<<< HEAD
-        <h1>Welcome to Allendale Homes</h1>
+            <h1>Welcome to Allendale Homes</h1>
+    
 
-=======
-        <h1>Allendale Homes</h1>
->>>>>>> 07a1d1f5bf6457fccb8906fc138f67ed4f35e1bf
         <nav class="navbar">
             <ul>
+            <li><a href="/Home-Page/index.html">Home</a></li>
             <li><a href="/Automated Tech/tech.html">Automated Technology</a></li>
             <li><a href="/Safety/Extra-Amenities.html">Safety Features</a></li>
             <li><a href="/Extra Rooms/extras.html">Extra Rooms/Appliances</a></li>
             </ul>
         </nav>
+
 
         <div class="top-image">
             <div class="text-top">
@@ -30,25 +29,6 @@
                 </p>
 
         </header>
-
-
-<<<<<<< HEAD
-=======
-
-<p>Purchase <strong>NOW</strong> and experience the world of your <strong>NEW</strong> high tech forever home!</p>
-
-<figcaption><strong>STARTING NOW AT $3.5 MILLION!</strong></figcaption>
-
-<ul>
-    <li>Automated Passwords</li>
-    <li>Sound Recognition for Pets</li>
-    <li>Automatic Folding Shutters and Closing Doors</li>
-</ul>
-
-<p>Experience <strong>YOUR</strong> Future</p>
-
-<hr>
->>>>>>> 07a1d1f5bf6457fccb8906fc138f67ed4f35e1bf
  
 
 
@@ -106,9 +86,9 @@
     <br>
     <br>
 
-
-
-
+    <p class="Welcome">
+Welcome to Allendale Homes, your premier destination for finding the perfect home in the heart of the Central Valley. Our website is designed to streamline your home-buying journey, offering an extensive database of listings that cater to a variety of tastes and budgets. Whether you're a first-time buyer, looking to upgrade, or searching for investment opportunities, we provide the resources and guidance you need. Our dedicated team of local experts is committed to delivering personalized service, ensuring you feel supported every step of the way. Explore neighborhood insights, market trends, and detailed property information to make informed decisions. At Allendale Homes, we believe that finding your dream home should be an enjoyable and stress-free experience. Join us as we help you navigate the vibrant Allendale real estate landscape!
+    </p>
    
     <img src="Robot Mice.png"
     width="600" height="900">
@@ -121,12 +101,6 @@
 
     <br>
     <br> 
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
     <br>
     <br>
     <br>
