--- a/Safety/Extra-Amenities.html
+++ b/Safety/Extra-Amenities.html
@@ -2,13 +2,27 @@
 <html lang="en-US"></html>
 <head><meta charset="UTF-8">
 
-    <link rel="stylesheet" href="flex.css">
+    <link rel="stylesheet" href="amen.css">
 
     <title>Safety</title>
     <body style="background-color: blanchedalmond;"></body>
+
+
+    <nav class="navbar">
+        <ul>
+        <li><a href="/Home-Page/index.html">Home</a></li>
+        <li><a href="/Automated Tech/tech.html">Automated Technology</a></li>
+        <li><a href="/Safety/Extra-Amenities.html">Safety Features</a></li>
+        <li><a href="/Extra Rooms/extras.html">Extra Rooms/Appliances</a></li>
+        </ul>
+    </nav>
+
     <h1>Safety/Amenities</h1>
+
     <body>
-        <img src="Fire Alarm.png"
+
+       
+        <img src="alarmm.png"
         width="500" height="270">
         <figcaption>Our fire alarm will warn you of any danger that might be near your house.</figcaption>
 
@@ -16,17 +30,10 @@
         width="500" height="270">
         <figcaption>Our water hoses come out the ceiling, <strong>GUARANTEED</strong> to put out <strong>ANY</strong> fire inside the house. </figcaption>
 
-        <img src="Fire rat.png"
-        width="500" height="270">
-        <figcaption>Our fire rats can put out <strong>ANY</strong> fire!</figcaption>
 
         <img src="ceiling robots.png"
         width="500" height="270">
         <figcaption>These ceiling robots will help your fire rats put out all fires within the house!</figcaption>
-
-        <img src="Robot Snake.png"
-        width="500" height="270">
-        <figcaption>Our invention of the robot snakes will help with any type of danger you come across.</figcaption>
 
 
     </body>
