--- a/Extra Rooms/extras.html
+++ b/Extra Rooms/extras.html
@@ -2,19 +2,29 @@
 <html lang="en-US"></html>
 <head><meta charset="UTF-8">
 
-    <link rel="stylesheet" href="flex.css">
+    <link rel="stylesheet" href="extra.css">
 
     <title>Extras Rooms</title>
+
+    <nav class="navbar">
+        <ul>
+        <li><a href="/Home-Page/index.html">Home</a></li>
+        <li><a href="/Automated Tech/tech.html">Automated Technology</a></li>
+        <li><a href="/Safety/Extra-Amenities.html">Safety Features</a></li>
+        <li><a href="/Extra Rooms/extras.html">Extra Rooms/Appliances</a></li>
+        </ul>
+    </nav>
+    
     <body style="background-color: blanchedalmond;"></body>
 
     <h1>Extra Rooms/Appliances</h1>
 
     <body>
-        <img src="fireplace.png"
+        <img src="fire.jpg"
         width="500" height="270">
         <figcaption><strong>ALL HOUSES COME WITH A NEW FIREPLACE!</strong></figcaption>
 
-        <img src="Speakers.png"
+        <img src="speaker.webp"
         width="500" height="270">
         <figcaption>Our built-in speakers can play <strong>ANYTHING</strong> you want.</figcaption>
 
