Smart Home Content

--- a/Extra Rooms/extras.html
+++ b/Extra Rooms/extras.html
@@ -20,17 +20,24 @@
     <h1>Extra Rooms/Appliances</h1>
 
     <body>
+
+        <div class="top-image">
+            <div class="text-top">
         <img src="fire.jpg"
         width="500" height="270">
-        <figcaption><strong>ALL HOUSES COME WITH A NEW FIREPLACE!</strong></figcaption>
+        <p>Enhance your home’s warmth and ambiance with our stunning fireplace, designed to provide efficient heating and create a cozy atmosphere for gatherings and relaxation.</p>
+       
+        <br> 
 
         <img src="speaker.webp"
         width="500" height="270">
-        <figcaption>Our built-in speakers can play <strong>ANYTHING</strong> you want.</figcaption>
+        <p>Transform your home entertainment experience with our built-in wall speakers, delivering immersive sound quality while seamlessly blending into your decor for a clean, modern look. </p>
 
+        <br>
+            
         <img src="glass walls.png"
         width="500" height="270">
-        <figcaption>You can customize any wall to anything, including glass!</figcaption>
+        <p>Transform your home with our customizable glass walls, which offer a sleek, modern aesthetic that maximizes natural light while providing a sense of openness. Tailor them to fit your specific design preferences and functional needs, whether you want to create spacious living areas or cozy, private spaces.</p>
 
 
     </body>
