--- a/Safety/Extra-Amenities.html
+++ b/Safety/Extra-Amenities.html
@@ -21,19 +21,22 @@
 
     <body>
 
-       
+
+        <div class="top-image">
+            <div class="text-top">
+
+        <div class="hi">
         <img src="alarmm.png"
         width="500" height="270">
-        <figcaption>Our fire alarm will warn you of any danger that might be near your house.</figcaption>
 
         <img src="ceiling water hoses.png"
         width="500" height="270">
-        <figcaption>Our water hoses come out the ceiling, <strong>GUARANTEED</strong> to put out <strong>ANY</strong> fire inside the house. </figcaption>
 
-
-        <img src="ceiling robots.png"
+        <img src="security.jpg"
         width="500" height="270">
-        <figcaption>These ceiling robots will help your fire rats put out all fires within the house!</figcaption>
+
+        <p>Invest in our comprehensive home security system for ultimate peace of mind, featuring a robust alarm that alerts you to any potential threats. Our innovative ceiling hoses ensure a quick response to emergencies by easily directing water to areas that need it, providing added protection against fire hazards. The fire rats are designed to detect smoke and heat, giving you early warnings when it matters most. With smart ceilings that integrate seamlessly with your home, you can control and monitor your security system from anywhere, ensuring your home is always protected. Plus, our advanced robot snakes patrol your property, providing a unique and effective layer of defense against intruders, so you can rest easy knowing your home is safe.</p>
+       
 
 
     </body>
