--- a/Automated Tech/tech.html
+++ b/Automated Tech/tech.html
@@ -23,6 +23,7 @@
 
         <div class="top-image">
             <div class="text-top">
+            <section class="center">
         <img src="clockk.jpg"
         width="500" height="270" style="display:block;margin:auto;">
         
@@ -32,7 +33,7 @@
 
 
         <img src="kitchenn.jpg"
-        width="500" height="270" alt="kitchen" style="display:block;margin:auto;">
+        width="500" height="270" style="display:block;margin:auto;">
 
         <p>Experience our newest kitchen. Our state-of-the-art kitchen cooks all on its own. </p>
 
@@ -44,6 +45,8 @@
 
         <p>Our newest dishwasher design. Clean your dishes in only a few minutes</p>
 
+
+            </section>
 
         
 
