--- a/Home-Page/index.html
+++ b/Home-Page/index.html
@@ -86,14 +86,19 @@
     <br>
     <br>
 
-    <p class="Welcome">
-Welcome to Allendale Homes, your premier destination for finding the perfect home in the heart of the Central Valley. Our website is designed to streamline your home-buying journey, offering an extensive database of listings that cater to a variety of tastes and budgets. Whether you're a first-time buyer, looking to upgrade, or searching for investment opportunities, we provide the resources and guidance you need. Our dedicated team of local experts is committed to delivering personalized service, ensuring you feel supported every step of the way. Explore neighborhood insights, market trends, and detailed property information to make informed decisions. At Allendale Homes, we believe that finding your dream home should be an enjoyable and stress-free experience. Join us as we help you navigate the vibrant Allendale real estate landscape!
-    </p>
-   
-    <img src="Robot Mice.png"
+    <div class="Welcome">
+
+
+    <img src="living.avif"
     width="600" height="900">
-    <img src="stovetop.jpg"
+    <img src="stove.webp"
     width="600" height="900">
+
+
+    <div class="top-images">
+        <div class="text-tops">
+    <p>Welcome to Allendale Homes, your premier destination for finding the perfect home in the heart of the Central Valley. Our website is designed to streamline your home-buying journey, offering an extensive database of listings that cater to a variety of tastes and budgets. Whether you're a first-time buyer, looking to upgrade, or searching for investment opportunities, we provide the resources and guidance you need. Our dedicated team of local experts is committed to delivering personalized service, ensuring you feel supported every step of the way. Explore neighborhood insights, market trends, and detailed property information to make informed decisions. At Allendale Homes, we believe that finding your dream home should be an enjoyable and stress-free experience. Join us as we help you navigate the vibrant Allendale real estate landscape.</p>
+    
 
 
 
