Smart Home Content

--- a/Safety/Extra-Amenities.html
+++ b/Safety/Extra-Amenities.html
@@ -22,10 +22,9 @@
     <body>
 
 
-        <div class="top-image">
-            <div class="text-top">
+        
 
-        <div class="hi">
+        <section class="extra">
         <img src="alarmm.png"
         width="500" height="270">
 
@@ -34,9 +33,26 @@
 
         <img src="security.jpg"
         width="500" height="270">
-
-        <p>Invest in our comprehensive home security system for ultimate peace of mind, featuring a robust alarm that alerts you to any potential threats. Our innovative ceiling hoses ensure a quick response to emergencies by easily directing water to areas that need it, providing added protection against fire hazards. The fire rats are designed to detect smoke and heat, giving you early warnings when it matters most. With smart ceilings that integrate seamlessly with your home, you can control and monitor your security system from anywhere, ensuring your home is always protected. Plus, our advanced robot snakes patrol your property, providing a unique and effective layer of defense against intruders, so you can rest easy knowing your home is safe.</p>
+        </section>
        
+        <br>
+        <br>
+        <br>
+        <br>
 
+        <section class="top-image">
+            <section class="text-top">
+        <p>Invest in our comprehensive home security system for ultimate peace of mind, featuring a robust alarm that alerts you to any potential threats. Our innovative ceiling hoses ensure a quick response to emergencies by easily directing water to areas that need it, providing added protection against fire hazards. The fire rats are designed to detect smoke and heat, giving you early warnings when it matters most. With smart ceilings that integrate seamlessly with your home, you can control and monitor your security system from anywhere, ensuring your home is always protected. Plus, our advanced robot snakes patrol your property, providing a unique and effective layer of defense against intruders, so you can rest easy knowing your home is safe.</p>
+            </section>
+        </section>
 
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+
+        <section class="bottom">
+            <header>About Us</header>          <header>Learn More</header>         <header>Contact Us</header>
+           </section>
     </body>
