--- a/Home-Page/index.html
+++ b/Home-Page/index.html
@@ -90,34 +90,50 @@
 
 
     <img src="living.avif"
-    width="600" height="900">
+    width="750" height="900">
     <img src="stove.webp"
-    width="600" height="900">
+    width="750" height="900">
 
 
-    <div class="top-images">
-        <div class="text-tops">
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+
+
+    <section class="images">
+        <section class="text">
     <p>Welcome to Allendale Homes, your premier destination for finding the perfect home in the heart of the Central Valley. Our website is designed to streamline your home-buying journey, offering an extensive database of listings that cater to a variety of tastes and budgets. Whether you're a first-time buyer, looking to upgrade, or searching for investment opportunities, we provide the resources and guidance you need. Our dedicated team of local experts is committed to delivering personalized service, ensuring you feel supported every step of the way. Explore neighborhood insights, market trends, and detailed property information to make informed decisions. At Allendale Homes, we believe that finding your dream home should be an enjoyable and stress-free experience. Join us as we help you navigate the vibrant Allendale real estate landscape.</p>
-    
+        </section>
+    </section>
 
 
 
 
 
-    <br>
-    <br> 
-    <br>
+  
     <br>
     <br>
     <br>
     <br>
     <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
+  
 
- <header>About Us</header>          <header>Learn More</header>         <header>Contact Us</header>
-    </body>
+ <section class="bottom">
+<p><em><strong>Experience the Future<strong></em></p>
+    <br>
+    <p><em><strong>Contact<strong></em></p>
+        <p>Email: braylenclee@gmail.com</p>
+        <p>559-123-4567</p>
+
+        <br>
+
+ <p>Instagram: braylen_337</p>
+ <p>FaceBook: braylen_337</p>
+
+
+ 
+</section>
+
+</body>
