smart home content

--- a/Home-Page/index.html
+++ b/Home-Page/index.html
@@ -10,11 +10,8 @@
 
         <title>Allendale Homes</title>
         <header>
-            <h1>Welcome to Allendale Homes</h1>
-<<<<<<< HEAD
-=======
+            <h1>Allendale Homes</h1>
     
->>>>>>> 3db51d1af7e765b465481ea32df9f9642dcbee15
 
         <nav class="navbar">
             <ul>
@@ -24,46 +21,10 @@
             <li><a href="/Extra Rooms/extras.html">Extra Rooms/Appliances</a></li>
             </ul>
         </nav>
-<<<<<<< HEAD
-       
-        <div class="top-image">
-            <div class="text-top">
-                <p>Welcome to Allendale Homes</p>
- 
-            </header>
-
-            <br>
-            <br>
-            <br>
-            <br>
-            <br>
-            <br>
-            <br>
-            <br>
-            <br>
-            <br>
-            <br>
-            <br>
-            <br>
-            <br>
-            <br>
-            <br>
-            <br>
-            <br>
-            <br>
-            <br>
 
 
-    <img src="Robot Mice.png"
-    width="500" height="270">
-    <img src="Stove.png"
-    width="500" height="270">
-   
-=======
-
-
-        <div class="top-image">
-            <div class="text-top">
+        <section class="top-image">
+            <section class="text-top">
                 <p>Welcome to Allendale Homes
                 </p>
 
@@ -77,62 +38,9 @@
     <br>
     <br>
     <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
->>>>>>> 3db51d1af7e765b465481ea32df9f9642dcbee15
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-
-<<<<<<< HEAD
-
  
- <footer>About Us</footer>          <footer>Learn More</footer>         <footer>Contact Us</footer>
-    </body>
-=======
-    <div class="Welcome">
+
+    <section class="Welcome">
 
 
     <img src="living.avif"
@@ -175,12 +83,11 @@
 
         <br>
 
- <p>Instagram: braylen_337</p>
- <p>FaceBook: braylen_337</p>
+ <p>Instagram: <a href= "https://www.instagram.com/braylen_337/">braylen_337</a></p>
+ <p>FaceBook: <a href="https://www.facebook.com/profile.php?id=100077059915376">Braylen Lee</a></p>
 
 
  
 </section>
 
 </body>
->>>>>>> 3db51d1af7e765b465481ea32df9f9642dcbee15
