smart home content

--- a/Extra Rooms/extras.html
+++ b/Extra Rooms/extras.html
@@ -8,7 +8,7 @@
 
     <nav class="navbar">
         <ul>
-        <li><a href="/Home-Page/index.html">Home</a></li>
+        <li><a href="/Home-Page/home.html">Home</a></li>
         <li><a href="/Automated Tech/tech.html">Automated Technology</a></li>
         <li><a href="/Safety/Extra-Amenities.html">Safety Features</a></li>
         <li><a href="/Extra Rooms/extras.html">Extra Rooms/Appliances</a></li>
@@ -56,6 +56,12 @@
             </section>
         </section>
     </section>
+
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
 
     <section class="bottom">
         <p><em><strong>Experience the Future<strong></em></p>
