--- a/Safety/Extra-Amenities.html
+++ b/Safety/Extra-Amenities.html
@@ -10,7 +10,7 @@
 
     <nav class="navbar">
         <ul>
-        <li><a href="/Home-Page/index.html">Home</a></li>
+        <li><a href="/Home-Page/home.html">Home</a></li>
         <li><a href="/Automated Tech/tech.html">Automated Technology</a></li>
         <li><a href="/Safety/Extra-Amenities.html">Safety Features</a></li>
         <li><a href="/Extra Rooms/extras.html">Extra Rooms/Appliances</a></li>
