--- a/Home-Page/home.html
+++ b/Home-Page/home.html
@@ -42,7 +42,7 @@
 
     <img src="living.avif"
     width="750" height="900">
-    <img src="stove.webp"
+    <img src="stove.1.jpg"
     width="750" height="900">
 
 
