--- a/Home-Page/home.html
+++ b/Home-Page/home.html
@@ -40,10 +40,10 @@
     <section class="Welcome">
 
 
-    <img src="living.avif"
-    width="750" height="900">
-    <img src="stove.1.jpg"
-    width="750" height="900">
+    <img src="livingroom.4k.jpg">
+    
+    <img src="stove.4k.jpg">
+   
 
 
     <br>
