--- a/Automated Tech/tech.html
+++ b/Automated Tech/tech.html
@@ -36,7 +36,7 @@
 
     <section class="tech">
         <section class="top-image">
-            <img src="kitchenn.jpg">
+            <img src="kitchen.4k.jpg">
         </section>
         <section class="text-top">
             <p>Experience our newest kitchen. Our state-of-the-art kitchen cooks all on its own. </p>
