--- a/Automated Tech/tech.html
+++ b/Automated Tech/tech.html
@@ -27,7 +27,7 @@
 
     <section class="tech">
         <section class="top-image">
-            <img src="clockk.jpg">
+            <img src="clock.4k.jpg">
         </section>
         <section class="text-top">
             <p>Introducing our newest invention: the Voice-Clock. Our clock helps with any daily task.</p>
@@ -45,7 +45,7 @@
 
     <section class="tech">
         <section class="top-image">
-            <img src="dish.jpg">
+            <img src="dish.4k.jpg">
         </section>
         <section class="text-top">
             <p>Our newest dishwasher design. Clean your dishes in only a few minutes.</p>
