--- a/Extra Rooms/extras.html
+++ b/Extra Rooms/extras.html
@@ -21,7 +21,7 @@
 
 
     <section class="extra">   
-        <img src="fire.jpg"
+        <img src="fire.4k.jpg"
         width="500" height="270">
 
         <section class="top-image">
