--- a/Extra Rooms/extras.html
+++ b/Extra Rooms/extras.html
@@ -47,7 +47,7 @@
         <br>
         
     <section class="classes">
-        <img src="glass walls.png"
+        <img src="glasswalls.4k.jpg"
         width="500" height="270">
 
         <section class="top-image">
