--- a/Safety/Extra-Amenities.html
+++ b/Safety/Extra-Amenities.html
@@ -25,13 +25,13 @@
         
 
         <section class="extra">
-        <img src="alarmm.png"
+        <img src="alarm.4k.jpg"
         width="500" height="270">
 
-        <img src="ceiling water hoses.png"
+        <img src="waterhoses.4k.jpg"
         width="500" height="270">
 
-        <img src="security.jpg"
+        <img src="security.4k.jpg"
         width="500" height="270">
         </section>
        
