--- a/Home-Page/home.html
+++ b/Home-Page/home.html
@@ -39,10 +39,11 @@
 
     <section class="Welcome">
 
-
+<section class="img">
     <img src="livingroom.4k.jpg">
     
     <img src="stove.4k.jpg">
+</section>
    
 
 
